--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Blog Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="assets/css/blog.css">
 
-
+		<link rel="icon" type="image/png" href="assets/images/favicon.ico">
 	</head>
 
 <body>
