--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,8 @@
 		<!-- Blog Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="assets/css/blog.css">
 
+		<link rel="icon" type="image/png" href="assets/images/favicon.ico">
+
 
 	</head>
 
