--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
 		<!-- Blog Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="assets/css/blog.css">
 
+		<link rel="icon" type="image/png" href="assets/images/favicon.ico">
+
 	</head>
 
 <body>
