restyling of portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,113 +44,40 @@
 				<div class="port-title panel">
 					<h2 class="port-title-text">Portfolio</h2>
 				</div>	
-				<div class="row split-row split-row-games">
+
+				<div class="row split-row split-row-group">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<h2 class="split-row-text">Games</h2>
-					</div>
-					<div class="col-md-2"></div>
-				</div>
-				<div class="row port-proj-row">
-					<div class="port-proj-col col-md-6">
-						<div class="panel port-proj">
-							<div class="panel-heading">
-								<a href="projects/Trivia-Game/index.html" target="_blank" class="project-title">Trivia Game</a>
-							</div>
-							<div class="panel-body">
-								<div clas ="row panel-row">
-									<div class="col-md-5 proj-col-left">
-										<a href="projects/Trivia-Game/index.html" target="_blank">
-											<img src="assets/images/random3.jpg" alt="Trivia-Game" class="project-img project-img-left" id="project-trivia"/>
-										</a>
-									</div>
-									<div class="col-md-7 proj-col-right">
-										<div class="row">
-											<h5 class="proj-mini-title">Summary:</h5>
-											<p>A multiple choice Disney Channel Original Movie triva game created with HTML, CSS, and JavaScript to include timers, count-downs, and gifs</p>
-										</div>
-										<div class="row">
-											<h5 class="proj-mini-title">Links:</h5>
-											<div class="col-md-6 proj-link-col">
-												<a href="projects/Trivia-Game/index.html" target="_blank" class="proj-link">
-												<p>Page Link</p>
-											</a>
-											</div>
-											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/TriviaGame" target="_blank" class="proj-link">
-												<p>Git Hub Repo</p>
-											</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="port-proj-col col-md-6">
-						<div class="panel port-proj">
-							<div class="panel-heading">
-								<a href="assets/projects/random/index.html" target="_blank" class="project-title">Random Number Game</a>
-							</div>
-							<div class="panel-body">
-								<div clas ="row panel-row">
-									<div class="col-md-5 proj-col-left">
-										<a href="assets/projects/random/index.html" target="_blank">
-											<img src="assets/images/random4.jpg" alt="Random-Number-Game" class="project-img project-img-left" id="project-random"/>
-										</a>
-									</div>
-									<div class="col-md-7 proj-col-right">
-										<div class="row">
-											<h5 class="proj-mini-title">Summary:</h5>
-											<p>A game Teenage Mutant Ninja Turtles themed addition game made with a large reliance on JQuery and Twitter Bootstrap</p>
-										</div>
-										<div class="row">
-											<h5 class="proj-mini-title">Links:</h5>
-											<div class="col-md-6 proj-link-col">
-												<a href="assets/projects/random/index.html" target="_blank" class="proj-link">
-												<p>Page Link</p>
-											</a>
-											</div>
-											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/week-4-game" target="_blank" class="proj-link">
-												<p>Git Hub Repo</p>
-											</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						<h2 class="split-row-text">Group Projects</h2>
 					</div>
 				</div>
 				<div class="row port-proj-row">
-					<div class="col-md-3"></div>
-					<div class="port-proj-col col-md-6">
+					<!--<div class="port-proj-col col-md-6">
 						<div class="panel port-proj">
 							<div class="panel-heading">
-								<a href="assets/projects/hangman/HomePage.html" target="_blank" class="project-title">Hangman Game</a>
+								<a href="assets/projects/arcade/public/view.html" target="_blank" class="project-title">ARRR-Cade</a>
 							</div>
 							<div class="panel-body">
 								<div clas ="row panel-row">
 									<div class="col-md-5 proj-col-left">
-										<a href="assets/projects/hangman/HomePage.html" target="_blank">
-											<img src="assets/images/random2.jpg" alt="Hangman-Project" class="project-img project-img-left" id="project-hangman"/>
+										<a href="assets/projects/arcade/public/view.html" target="_blank">
+											<img src="assets/images/random1.jpg" alt="See-You-There-App" class="project-img project-img-left" id="see-you-there"/>
 										</a>
 									</div>
 									<div class="col-md-7 proj-col-right">
 										<div class="row">
 											<h5 class="proj-mini-title">Summary:</h5>
-											<p>An interactive Hangman game that uses HTML, CSS, and JavaScript to allow the user to guess words from either the Star Wars universe or 90s cartoon TV shows</p>
+											<p>A user authitified app that successfully integrates multiple APIs including Google Maps and Underground Weather to allow the user to create and store events to a personal schedule using Firebase Database</p>
 										</div>
 										<div class="row">
 											<h5 class="proj-mini-title">Links:</h5>
 											<div class="col-md-6 proj-link-col">
-												<a href="assets/projects/hangman/HomePage.html" target="_blank" class="proj-link">
+												<a href="assets/projects/arcade/public/view.html" target="_blank" class="proj-link">
 												<p>Page Link</p>
 											</a>
 											</div>
 											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/hangman-game" target="_blank" class="proj-link">
+												<a href="https://github.com/paden-pace/group-project-1" target="_blank" class="proj-link">
 												<p>Git Hub Repo</p>
 											</a>
 											</div>
@@ -159,56 +86,13 @@
 								</div>
 							</div>
 						</div>
+					</div>-->
+					<div class "col-md-3">
 					</div>
-					<div class="col-md-3"></div>
-				</div>
-				<div class="row split-row split-row-apps">
-					<div class="col-md-2"></div>
-					<div class="col-md-8">
-						<h2 class="split-row-text">Applications</h2>
-					</div>
-					<div class="col-md-2"></div>
-				</div>
-				<div class="row port-proj-row">
-					<div class="port-proj-col col-md-6">
+					<div class="port-proj-col col-md-12">
 						<div class="panel port-proj">
 							<div class="panel-heading">
-								<a href="assets/projects/train/index.html" target="_blank" class="project-title">Train Scheduler</a>
-							</div>
-							<div class="panel-body">
-								<div clas ="row panel-row">
-									<div class="col-md-5 proj-col-left">
-										<a href="assets/projects/train/index.html" target="_blank">
-											<img src="assets/images/random5.jpg" alt="Train-Scheduler" class="project-img project-img-left" id="train-scheduler"/>
-										</a>
-									</div>
-									<div class="col-md-7 proj-col-right">
-										<div class="row">
-											<h5 class="proj-mini-title">Summary:</h5>
-											<p>An interactive scheduler for calculating repeating train arrivals with the use of Moment.JS and Google's Firebase Database</p>
-										</div>
-										<div class="row">
-											<h5 class="proj-mini-title">Links:</h5>
-											<div class="col-md-6 proj-link-col">
-												<a href="assets/projects/train/index.html" target="_blank" class="proj-link">
-												<p>Page Link</p>
-											</a>
-											</div>
-											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/train-schedule" target="_blank" class="proj-link">
-												<p>Git Hub Repo</p>
-											</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="port-proj-col col-md-6">
-						<div class="panel port-proj">
-							<div class="panel-heading">
-								<a href="projects/group-project-1/index.html" target="_blank" class="project-title">See You There App</a>
+								<a href="assets/projects/seeYouThere/index.html" target="_blank" class="project-title">See You There App</a>
 							</div>
 							<div class="panel-body">
 								<div clas ="row panel-row">
@@ -225,7 +109,7 @@
 										<div class="row">
 											<h5 class="proj-mini-title">Links:</h5>
 											<div class="col-md-6 proj-link-col">
-												<a href="projects/group-project-1/index.html" target="_blank" class="proj-link">
+												<a href="assets/projects/seeYouThere/index.html" target="_blank" class="proj-link">
 												<p>Page Link</p>
 											</a>
 											</div>
@@ -240,46 +124,154 @@
 							</div>
 						</div>
 					</div>
-				</div>	
+					<div class "col-md-3">
+					</div>
+				</div>
+
+				<div class="row split-row split-row-simple">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
+						<h2 class="split-row-text">Simple Applications</h2>
+					</div>
+					<div class="col-md-2"></div>
+				</div>
 				<div class="row port-proj-row">
-					<div class="col-md-3"></div>
-					<div class="port-proj-col col-md-6">
+					<div class="port-proj-col col-md-3">
 						<div class="panel port-proj">
 							<div class="panel-heading">
-								<a href="assets/projects/gif/index.html" target="_blank" class="project-title">Gif Search</a>
+								<a href="assets/projects/random/index.html" target="_blank" class="project-title">Random Number Game</a>
 							</div>
 							<div class="panel-body">
 								<div clas ="row panel-row">
-									<div class="col-md-5 proj-col-left">
-										<a href="assets/projects/gif/index.html" target="_blank">
-											<img src="assets/images/random1.jpg" alt="Gif-Search" class="project-img project-img-left" id="project-gif"/>
+									<div class="col-md-12 proj-col-left">
+										<a href="assets/projects/random/index.html" target="_blank">
+											<img src="assets/images/random4.jpg" alt="Random-Number-Game" class="project-img project-img-left" id="project-random"/>
 										</a>
 									</div>
-									<div class="col-md-7 proj-col-right">
+								</div>
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-right">
 										<div class="row">
 											<h5 class="proj-mini-title">Summary:</h5>
-											<p>A simple search page that uses the Giffy API to search for gifs, and create set specific search buttons</p>
+											<p>A game Teenage Mutant Ninja Turtles themed addition game made with a large reliance on JQuery and Twitter Bootstrap</p>
 										</div>
 										<div class="row">
 											<h5 class="proj-mini-title">Links:</h5>
-											<div class="col-md-6 proj-link-col">
-												<a href="assets/projects/gif/index.html" target="_blank" class="proj-link">
+											<a href="assets/projects/random/index.html" target="_blank" class="proj-link">
 												<p>Page Link</p>
 											</a>
-											</div>
-											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/gif-search" target="_blank" class="proj-link">
+											<a href="https://github.com/paden-pace/week-4-game" target="_blank" class="proj-link">
 												<p>Git Hub Repo</p>
 											</a>
-											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3"></div>
+					<div class="port-proj-col col-md-3">
+						<div class="panel port-proj">
+							<div class="panel-heading">
+								<a href="assets/projects/hangman/HomePage.html" target="_blank" class="project-title">Hangman Game</a>
+							</div>
+							<div class="panel-body">
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-left">
+										<a href="assets/projects/hangman/HomePage.html" target="_blank">
+											<img src="assets/images/random2.jpg" alt="Hangman-Project" class="project-img project-img-left" id="project-hangman"/>
+										</a>
+									</div>
+								</div>
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-right">
+										<div class="row">
+											<h5 class="proj-mini-title">Summary:</h5>
+											<p>An interactive Hangman game that uses HTML, CSS, and JavaScript to allow the user to guess words from either the Star Wars universe or 90s cartoon TV shows</p>
+										</div>
+										<div class="row">
+											<h5 class="proj-mini-title">Links:</h5>
+											<a href="assets/projects/hangman/HomePage.html" target="_blank" class="proj-link">
+												<p>Page Link</p>
+											</a>
+											<a href="https://github.com/paden-pace/hangman-game" target="_blank" class="proj-link">
+												<p>Git Hub Repo</p>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="port-proj-col col-md-3">
+						<div class="panel port-proj">
+							<div class="panel-heading">
+								<a href="assets/projects/train/index.html" target="_blank" class="project-title">Train Scheduler</a>
+							</div>
+							<div class="panel-body">
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-left">
+										<a href="assets/projects/train/index.html" target="_blank">
+											<img src="assets/images/random5.jpg" alt="Train-Scheduler" class="project-img project-img-left" id="train-scheduler"/>
+										</a>
+									</div>
+								</div>
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-right">
+										<div class="row">
+											<h5 class="proj-mini-title">Summary:</h5>
+											<p>An interactive scheduler for calculating repeating train arrivals with the use of Moment.JS and Google's Firebase Database</p>
+										</div>
+										<div class="row">
+											<h5 class="proj-mini-title">Links:</h5>
+											<a href="assets/projects/train/index.html" target="_blank" class="proj-link">
+												<p>Page Link</p>
+											</a>
+											<a href="https://github.com/paden-pace/train-schedule" target="_blank" class="proj-link">
+												<p>Git Hub Repo</p>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="port-proj-col col-md-3">
+						<div class="panel port-proj">
+							<div class="panel-heading">
+								<a href="assets/projects/gif/index.html" target="_blank" class="project-title">Gif Search</a>
+							</div>
+							<div class="panel-body">
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-left">
+										<a href="assets/projects/gif/index.html" target="_blank">
+											<img src="assets/images/random1.jpg" alt="Gif-Search" class="project-img project-img-left" id="project-gif"/>
+										</a>
+									</div>
+								</div>
+								<div clas ="row panel-row">
+									<div class="col-md-12 proj-col-right">
+										<div class="row">
+											<h5 class="proj-mini-title">Summary:</h5>
+											<p>A simple search page that uses the Giffy API to search for gifs, and create set specific search buttons</p>
+										</div>
+										<div class="row">
+											<h5 class="proj-mini-title">Links:</h5>
+											<a href="assets/projects/gif/index.html" target="_blank" class="proj-link">
+												<p>Page Link</p>
+											</a>
+											<a href="https://github.com/paden-pace/gif-search" target="_blank" class="proj-link">
+												<p>Git Hub Repo</p>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+
+	
+
 				<div class="row split-row split-row-pages">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
