site adjustments and addition of app images

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 								<img src="assets/images/paden-profile.jpg" alt="paden-profile" class="profile-img"/>
 							</div>
 							<div row>
-								<p>I graduated the University of Texas with a BA in Government, two certificates in "Business Foundations" and "Conflict Resolution and Peace Studies". In addition to being a certified mediator and a two-time world champion Quidditch player, I am also completing the UT Coding Bootcamp to further my career in the world of software development.</p> 	
-								<p>While I have many interests including acrylic painting, country-western dancing, and fantasy football, I hope you will take the time to explore my portfolio and contact me with any inquiries, comments, or questions.</p>
+								<p>After completing my undergraduate degree at the University of Texas I quickly realized my interest in the world of web development. I immediately attended the UT Coding Bootcamp to cultivate the skills necessary to move my career into the Tech Industry. I have additional certificates in business and conflict mediation, which will increase my value for positions in the start-up, service, or consulting sectors, but I am truly interested in all areas of the tech industry. I’m currently looking to begin a career in the tech industry, preferably in the Austin or Denver areas.</p> 	
+								<p>While I am following the traditional job search venues for the tech industry, through sites like Indeed or Glassdoor, I would be interested to learn of any career opportunities that I may have overlooked. My contact information is provided through this portfolio, and I thank you in advance for any help you can provide.</p>
 							</div>
 						</div>
 					</div>
