--- a/portfolio.html
+++ b/portfolio.html
@@ -52,32 +52,32 @@
 					</div>
 				</div>
 				<div class="row port-proj-row">
-					<!--<div class="port-proj-col col-md-6">
+					<div class="port-proj-col col-md-6">
 						<div class="panel port-proj">
 							<div class="panel-heading">
-								<a href="assets/projects/arcade/public/view.html" target="_blank" class="project-title">ARRR-Cade</a>
+								<a href="https://roll-initiative.herokuapp.com/" target="_blank" class="project-title">Roll Init</a>
 							</div>
 							<div class="panel-body">
 								<div clas ="row panel-row">
 									<div class="col-md-5 proj-col-left">
-										<a href="assets/projects/arcade/public/view.html" target="_blank">
-											<img src="assets/images/random1.jpg" alt="See-You-There-App" class="project-img project-img-left" id="see-you-there"/>
+										<a href="https://roll-initiative.herokuapp.com/" target="_blank">
+											<img src="assets/images/rollInit.png" alt="Roll-Init-App" class="project-img project-img-left" id="roll-init"/>
 										</a>
 									</div>
 									<div class="col-md-7 proj-col-right">
 										<div class="row">
 											<h5 class="proj-mini-title">Summary:</h5>
-											<p>A user authitified app that successfully integrates multiple APIs including Google Maps and Underground Weather to allow the user to create and store events to a personal schedule using Firebase Database</p>
+											<p>•	A web application using a privately created API to streamline the creation of Dungeons & Dragons characters stored to a user specific profile logged with a Mongo database</p>
 										</div>
 										<div class="row">
 											<h5 class="proj-mini-title">Links:</h5>
 											<div class="col-md-6 proj-link-col">
-												<a href="assets/projects/arcade/public/view.html" target="_blank" class="proj-link">
+												<a href="https://roll-initiative.herokuapp.com/" target="_blank" class="proj-link">
 												<p>Page Link</p>
 											</a>
 											</div>
 											<div class="col-md-6 proj-link-col">
-												<a href="https://github.com/paden-pace/group-project-1" target="_blank" class="proj-link">
+												<a href="https://github.com/monicaj314/rollinit" target="_blank" class="proj-link">
 												<p>Git Hub Repo</p>
 											</a>
 											</div>
@@ -86,10 +86,8 @@
 								</div>
 							</div>
 						</div>
-					</div>-->
-					<div class "col-md-3">
 					</div>
-					<div class="port-proj-col col-md-12">
+					<div class="port-proj-col col-md-6">
 						<div class="panel port-proj">
 							<div class="panel-heading">
 								<a href="assets/projects/seeYouThere/index.html" target="_blank" class="project-title">See You There App</a>
@@ -98,13 +96,13 @@
 								<div clas ="row panel-row">
 									<div class="col-md-5 proj-col-left">
 										<a href="assets/projects/seeYouThere/index.html" target="_blank">
-											<img src="assets/images/random1.jpg" alt="See-You-There-App" class="project-img project-img-left" id="see-you-there"/>
+											<img src="assets/images/seeYou.png" alt="See-You-There-App" class="project-img project-img-left" id="see-you-there"/>
 										</a>
 									</div>
 									<div class="col-md-7 proj-col-right">
 										<div class="row">
 											<h5 class="proj-mini-title">Summary:</h5>
-											<p>A user authitified app that successfully integrates multiple APIs including Google Maps and Underground Weather to allow the user to create and store events to a personal schedule using Firebase Database</p>
+											<p>A user authorized app that successfully integrates multiple APIs including Google Maps and Underground Weather to allow the user to create and store events to a personal schedule using Firebase Database</p>
 										</div>
 										<div class="row">
 											<h5 class="proj-mini-title">Links:</h5>
@@ -124,7 +122,84 @@
 							</div>
 						</div>
 					</div>
-					<div class "col-md-3">
+				</div>
+
+				<div class="row split-row split-row-group">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
+						<h2 class="split-row-text">Individual Projects</h2>
+					</div>
+				</div>
+				<div class="row port-proj-row">
+					<div class="port-proj-col col-md-6">
+						<div class="panel port-proj">
+							<div class="panel-heading">
+								<a href="https://pure-sea-28290.herokuapp.com/" target="_blank" class="project-title">The Onion Peeler</a>
+							</div>
+							<div class="panel-body">
+								<div clas ="row panel-row">
+									<div class="col-md-5 proj-col-left">
+										<a href="https://pure-sea-28290.herokuapp.com/" target="_blank">
+											<img src="assets/images/onion.png" alt="Roll-Init-App" class="project-img project-img-left" id="onion-peeler"/>
+										</a>
+									</div>
+									<div class="col-md-7 proj-col-right">
+										<div class="row">
+											<h5 class="proj-mini-title">Summary:</h5>
+											<p>A Web application using Cheerio to scrape The Onion's website and provide the oppurtunity for users to save and comment on articles to a MongoDB.</p>
+										</div>
+										<div class="row">
+											<h5 class="proj-mini-title">Links:</h5>
+											<div class="col-md-6 proj-link-col">
+												<a href="https://pure-sea-28290.herokuapp.com/" target="_blank" class="proj-link">
+												<p>Page Link</p>
+											</a>
+											</div>
+											<div class="col-md-6 proj-link-col">
+												<a href="https://github.com/paden-pace/mongo_scraper" target="_blank" class="proj-link">
+												<p>Git Hub Repo</p>
+											</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="port-proj-col col-md-6">
+						<div class="panel port-proj">
+							<div class="panel-heading">
+								<a href="https://radiant-tundra-52846.herokuapp.com/" target="_blank" class="project-title">New York Times React App</a>
+							</div>
+							<div class="panel-body">
+								<div clas ="row panel-row">
+									<div class="col-md-5 proj-col-left">
+										<a href="https://radiant-tundra-52846.herokuapp.com/" target="_blank">
+											<img src="assets/images/nyt.png" alt="nyTimes" class="project-img project-img-left" id="nyTimesReact"/>
+										</a>
+									</div>
+									<div class="col-md-7 proj-col-right">
+										<div class="row">
+											<h5 class="proj-mini-title">Summary:</h5>
+											<p>A react based web application designed to use the NYTimes's API to provide a MongoDB of saved articles for review later</p>
+										</div>
+										<div class="row">
+											<h5 class="proj-mini-title">Links:</h5>
+											<div class="col-md-6 proj-link-col">
+												<a href="https://radiant-tundra-52846.herokuapp.com/" target="_blank" class="proj-link">
+												<p>Page Link</p>
+											</a>
+											</div>
+											<div class="col-md-6 proj-link-col">
+												<a href="https://github.com/paden-pace/nytreact" target="_blank" class="proj-link">
+												<p>Git Hub Repo</p>
+											</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -145,7 +220,7 @@
 								<div clas ="row panel-row">
 									<div class="col-md-12 proj-col-left">
 										<a href="assets/projects/random/index.html" target="_blank">
-											<img src="assets/images/random4.jpg" alt="Random-Number-Game" class="project-img project-img-left" id="project-random"/>
+											<img src="assets/images/random.png" alt="Random-Number-Game" class="project-img project-img-left" id="project-random"/>
 										</a>
 									</div>
 								</div>
@@ -178,7 +253,7 @@
 								<div clas ="row panel-row">
 									<div class="col-md-12 proj-col-left">
 										<a href="assets/projects/hangman/HomePage.html" target="_blank">
-											<img src="assets/images/random2.jpg" alt="Hangman-Project" class="project-img project-img-left" id="project-hangman"/>
+											<img src="assets/images/hangman.png" alt="Hangman-Project" class="project-img project-img-left" id="project-hangman"/>
 										</a>
 									</div>
 								</div>
@@ -211,7 +286,7 @@
 								<div clas ="row panel-row">
 									<div class="col-md-12 proj-col-left">
 										<a href="assets/projects/train/index.html" target="_blank">
-											<img src="assets/images/random5.jpg" alt="Train-Scheduler" class="project-img project-img-left" id="train-scheduler"/>
+											<img src="assets/images/train.png" alt="Train-Scheduler" class="project-img project-img-left" id="train-scheduler"/>
 										</a>
 									</div>
 								</div>
@@ -244,7 +319,7 @@
 								<div clas ="row panel-row">
 									<div class="col-md-12 proj-col-left">
 										<a href="assets/projects/gif/index.html" target="_blank">
-											<img src="assets/images/random1.jpg" alt="Gif-Search" class="project-img project-img-left" id="project-gif"/>
+											<img src="assets/images/gif.png" alt="Gif-Search" class="project-img project-img-left" id="project-gif"/>
 										</a>
 									</div>
 								</div>
@@ -272,13 +347,13 @@
 
 	
 
-				<div class="row split-row split-row-pages">
+				<!--<div class="row split-row split-row-pages">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
 						<h2 class="split-row-text">Webpages</h2>
 					</div>
 					<div class="col-md-2"></div>
-				</div>	
+				</div>	-->
 			</div>
 			<div class="port-side outside col-lg-12">
 				<div class="sidebar panel">
