--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/blog.css">
 
 		<link rel="icon" type="image/png" href="assets/images/favicon.ico">
+		<!--Heroku comment-->
 	</head>
 
 <body>
