changes for heroku

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 		    </div>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li class="nav-tab"><a href="index.html">About</a></li>
-		        <li class="nav-tab"><a href="portfolio.html">Portfolio</a></li>
-				<li class="nav-tab"><a href="portfolioCopy.html">Portfolio2</a></li>
-		        <li class="nav-tab"><a href="blog.html">Blog</a></li>
+		        <!--<li class="nav-tab"><a href="portfolio.html">Portfolio</a></li>-->
+				<li class="nav-tab"><a href="portfolioCopy.html">Portfolio</a></li>
+		        <!--<li class="nav-tab"><a href="blog.html">Blog</a></li>-->
+				<li class="nav-tab"><a href="blogCopy.html">Blog</a></li>
 		        <li class="nav-tab"><a href="contact.html">Contact</a></li>
 		      </ul>
 		  </div>
