--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,11 @@
 
 	</head>
 
+
 <body>
+
+	<!--Blog.html is updated-->
+
 	<div class="header">
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
