additions for heroku

--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 
 <body>
 
-	<!--Blog.html is updated-->
+	<!--Blog.html is connected-->
 
 	<div class="header">
 		<nav class="navbar navbar-default">
