--- a/blogCopy.html
+++ b/blogCopy.html
@@ -33,6 +33,9 @@
 	</head>
 
 <body>
+
+	<!--BlogCopy.html is connected-->
+
 	<div class="header">
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
