--- a/blogCopy.html
+++ b/blogCopy.html
@@ -16,7 +16,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 		<!-- Blog JavaScript Link -->
-		<script type="text/javascript" src="assets/js/blog.js"></script>
+		<script type="text/javascript" src="assets/js/blogCopy.js"></script>
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Slabo+27px" rel="stylesheet">
