addition of phone and email

--- a/contact.html
+++ b/contact.html
@@ -73,20 +73,32 @@
 							<h3 class="connect-title">Connect With Me</h3>
 						</div>
 						<div class="row">
-							<div class="col-lg-4">
-								<a href="https://github.com/paden-pace" target="_blank" >
-									<img src="assets/images/github-square.png" alt="github-square" class="social-link" width="50px" height="50px" />
-								</a>
+							<div class="col-lg-6 cont-info-col">
+								<div class="row">
+									<h5>Phone Number</h5>
+									<p>(210)-415-8339</p>
+								</div>
+								<div class="row">
+									<h5>Email Address</h5>
+									<p>pjpace27@yahoo.com</p>
+								</div>
 							</div>
-							<div class="col-lg-4">
-								<a href="https://www.linkedin.com/in/paden-pace-510949a1?" target="_blank">
-									<img src="assets/images/linkedin-square.png" alt="linkedin-square" class="social-link" width="50px" height="50px" />
-								</a>
-							</div>
-							<div class="col-lg-4">	
-								<a href="http://stackoverflow.com/users/7196071/paden-pace" target="_blank">
-									<img src="assets/images/stackoverflow-square.png" alt="stackoverflow-square" class="social-link" width="50px" height="50px">
-								</a>
+							<div class="col-lg-6">
+								<div class="row">
+									<a href="https://github.com/paden-pace" target="_blank" >
+										<img src="assets/images/github-square.png" alt="github-square" class="social-link" width="50px" height="50px" />
+									</a>
+								</div>
+								<div class="row">
+									<a href="https://www.linkedin.com/in/paden-pace-510949a1?" target="_blank">
+										<img src="assets/images/linkedin-square.png" alt="linkedin-square" class="social-link" width="50px" height="50px" />
+									</a>
+								</div>
+								<div class="row">	
+									<a href="http://stackoverflow.com/users/7196071/paden-pace" target="_blank">
+										<img src="assets/images/stackoverflow-square.png" alt="stackoverflow-square" class="social-link" width="50px" height="50px">
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
